--- a/.env
+++ b/.env
@@ -31,7 +31,7 @@ MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=465
 MAIL_USERNAME=dummyqwerty34@gmail.com
-MAIL_PASSWORD=dummyqwerty123
+MAIL_PASSWORD=@dummy123
 MAIL_ENCRYPTION=ssl
 MAIL_FROM_ADDRESS=dummyqwerty34@gmail.com
 MAIL_FROM_NAME="Prelim App"
